<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="200px"
        android:text="@string/project_info"
        android:id="@+id/project_info_text"

        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/insecure_logcat_btn"
        android:text="@string/insecure_log_btn"
        app:layout_constraintTop_toBottomOf="@id/project_info_text" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exported_activity_btn"
        android:id="@+id/exported_activity_btn"
        app:layout_constraintTop_toBottomOf="@id/insecure_logcat_btn"/>


</androidx.constraintlayout.widget.ConstraintLayout>