<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InsecureLogActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/insecure_logcat_text"
        android:text="@string/insecure_log_text"
        app:layout_constraintTop_toTopOf="parent"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:id="@+id/insecure_edit_text"
        app:layout_constraintTop_toBottomOf="@id/insecure_logcat_text"
        android:text="输入内容"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/insecure_submit_btn"
        app:layout_constraintTop_toBottomOf="@id/insecure_edit_text"
        android:text="@string/submit_btn"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="100dp"
        android:text="@string/back_btn"
        android:id="@+id/back_btn"/>
</androidx.constraintlayout.widget.ConstraintLayout>